objects/Exception_log__c.object
<CustomObject>
    <description>To Capture exception log</description>
    <fields>
        <fullName>Account_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account_Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Exception logs</relationshipLabel>
        <relationshipName>Exception_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look-up to Agreement record. Added as enhancement to Spectrum Contract Update/Amendment additions 9/2015</description>
        <label>Agreement</label>
        <referenceTo>echosign_dev1__SIGN_Agreement__c</referenceTo>
        <relationshipLabel>Exception Logs</relationshipLabel>
        <relationshipName>Exception_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Class_Id__c</fullName>
        <label>Class Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Link__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + Class_Id__c , &apos;View Class&apos;, &apos;_BLANK&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_to_Notify__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer to Notify</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Exception logs</relationshipLabel>
        <relationshipName>Exception_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Error Message</description>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead_Id</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Exception logs</relationshipLabel>
        <relationshipName>Exception_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity_Id</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Exception logs</relationshipLabel>
        <relationshipName>Exception_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Id__c</fullName>
        <label>Organization Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Exception__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Exception</label>
        <referenceTo>Exception_log__c</referenceTo>
        <relationshipLabel>Exception logs</relationshipLabel>
        <relationshipName>Exception_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Exception logs</relationshipLabel>
        <relationshipName>Exception_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Exception logs</relationshipLabel>
        <relationshipName>Exception_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Message__c</fullName>
        <description>This field contains Web Service payloads for use in debugging issues from Web service callouts.</description>
        <label>Request Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Session_Id__c</fullName>
        <label>Session Id</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Exception_logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lead__c</fullName>
        <description>lead</description>
        <label>lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Exception log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Error_Message__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Opportunity_Id__c</columns>
        <columns>Account_Id__c</columns>
        <columns>Lead_Id__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Exception_Test</fullName>
        <columns>NAME</columns>
        <columns>Error_Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY,YESTERDAY</value>
        </filters>
        <label>Exception Test</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Log_s_Today</fullName>
        <columns>NAME</columns>
        <columns>Error_Message__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Log&apos;s Today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Log_s_Yesterday</fullName>
        <columns>NAME</columns>
        <columns>Error_Message__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Log&apos;s Yesterday</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Logs_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Error_Message__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Log&apos;s This Week</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PO_Exception_Logs</fullName>
        <columns>NAME</columns>
        <columns>Error_Message__c</columns>
        <columns>Stack_Trace__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Purchase_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <filters>
            <field>Purchase_Order__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>PO Exception Logs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Exception log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exception logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>